[gd_scene load_steps=6 format=3 uid="uid://4ftyet7a2b45"]

[ext_resource type="Script" uid="uid://cheprfhboa6pd" path="res://scripts/main.gd" id="1_o5qli"]
[ext_resource type="Script" uid="uid://d4bspmfum5wc" path="res://scripts/ui.gd" id="2_0wfyh"]
[ext_resource type="PackedScene" uid="uid://cohuot7eqkgvi" path="res://scenes/ui/settings.tscn" id="3_sugp2"]

[sub_resource type="LabelSettings" id="LabelSettings_sgp6g"]
font_size = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o5qli"]
draw_center = false

[node name="main" type="Node2D"]
script = ExtResource("1_o5qli")

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("2_0wfyh")

[node name="Menu" type="Panel" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Name" type="Label" parent="UI/Menu/VBoxContainer"]
custom_minimum_size = Vector2(200, 10)
layout_mode = 2
text = "Placeholder_name"
label_settings = SubResource("LabelSettings_sgp6g")
horizontal_alignment = 1
autowrap_mode = 2
justification_flags = 162

[node name="Panel" type="Panel" parent="UI/Menu/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_o5qli")

[node name="NewGameBtn" type="Button" parent="UI/Menu/VBoxContainer"]
layout_mode = 2
text = "New Game
"

[node name="SettingsBtn" type="Button" parent="UI/Menu/VBoxContainer"]
layout_mode = 2
text = "Settings
"

[node name="QuitBtn" type="Button" parent="UI/Menu/VBoxContainer"]
layout_mode = 2
text = "Quit
"

[node name="Settings" parent="UI" instance=ExtResource("3_sugp2")]

[connection signal="pressed" from="UI/Menu/VBoxContainer/NewGameBtn" to="UI" method="_on_new_game_btn_pressed"]
[connection signal="pressed" from="UI/Menu/VBoxContainer/SettingsBtn" to="UI" method="_on_settings_btn_pressed"]
[connection signal="pressed" from="UI/Menu/VBoxContainer/QuitBtn" to="UI" method="_on_quit_btn_pressed"]
